--- a/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
+++ b/Ubiquitous2/Skins/Main/ChatBoxSkin.xaml
@@ -3,20 +3,22 @@
                     xmlns:ubview="clr-namespace:UB.View"
                     xmlns:ubviewmodel="clr-namespace:UB.ViewModel"
                     xmlns:Interactivity="clr-namespace:UB.Interactivity"
-                    xmlns:dc="clr-namespace:Devart.Controls"
+                    xmlns:dc="clr-namespace:Devart.Controls"            
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+                    mc:Ignorable="d" 
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
     <Style x:Key="ChatBoxStyle" TargetType="{x:Type UserControl}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type UserControl}">
-                    <DockPanel LastChildFill="True" Margin="0">
                         <ItemsControl ItemsSource="{Binding Messages}" Padding="0" Margin="0,0,-4,0">
                             <ItemsControl.Template>
                                 <ControlTemplate>
-                                    <ScrollViewer Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
+                                    <ScrollViewer d:DesignHeight="200" d:DesignWidth="500"  Template="{DynamicResource ScrollStyle}" CanContentScroll="True">
                                         <i:Interaction.Triggers>
-                                            <Interactivity:DataEventTrigger EventName="MessageAdded">                                                
+                                            <Interactivity:DataEventTrigger EventName="MessageAdded" d:EventName="">
                                                 <Interactivity:AutoScrollAction Duration="100"/>
                                             </Interactivity:DataEventTrigger>
                                         </i:Interaction.Triggers>
@@ -26,18 +28,14 @@
                             </ItemsControl.Template>
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <dc:SmoothPanel VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
-                                        <dc:SmoothPanel.CacheMode>
-                                            <BitmapCache/>
-                                        </dc:SmoothPanel.CacheMode>
-                                        <dc:SmoothPanel.Templates>
-                                            <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
-                                        </dc:SmoothPanel.Templates>
-                                    </dc:SmoothPanel>
+                                        <dc:SmoothPanel VirtualizingPanel.CacheLength="5" VirtualizingPanel.CacheLengthUnit="Page" Margin="0,0,-2,0">
+                                            <dc:SmoothPanel.Templates>
+                                                <dc:SmoothPanelTemplate ViewModel="{x:Type ubviewmodel:ChatMessageViewModel}" View="{x:Type ubview:ChatMessageView}" />
+                                            </dc:SmoothPanel.Templates>
+                                        </dc:SmoothPanel>
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                         </ItemsControl>
-                    </DockPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
