--- a/Ubiquitous2/Skins/Main/MainWindowSkin.xaml
+++ b/Ubiquitous2/Skins/Main/MainWindowSkin.xaml
@@ -47,35 +47,47 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
-                    <DockPanel d:DesignHeight="300" d:DesignWidth="500"> 
+                    <DockPanel d:DesignHeight="300" d:DesignWidth="500">
                         <Grid Background="#FF09210A">
-                            <Border Padding="5" VerticalAlignment="Top" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" Background="#B2000000">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+                            <Border Grid.Row="0" Padding="5" VerticalAlignment="Top" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}">
+                                <Border.Background>
+                                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                        <GradientStop Color="#FF252525" Offset="0.465"/>
+                                        <GradientStop Color="#FF175B14" Offset="0.971"/>
+                                        <GradientStop Color="#FF175B14"/>
+                                    </LinearGradientBrush>
+                                </Border.Background>
                                 <TextBlock Background="Transparent" Foreground="White">
                                     <Hyperlink Style="{StaticResource ResourceKey=OverlayHyperlink}" Command="{Binding ShowSettings}">
                                         <Image Source="/Ubiquitous2;component/Resources/gear.png" Width="16" Height="16" Margin="0,0,0,-3"/> Settings
                                     </Hyperlink>
                                 </TextBlock>
                             </Border>
-                            <View:ChatBoxView Margin="3,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0"/>
+                            <View:ChatBoxView Grid.Row="1" Margin="3,0" RenderTransformOrigin="1,0" OverridesDefaultStyle="True" Padding="0"/>
+                            <Border Grid.Row="2" Padding="5" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" BorderBrush="#FF165B1D" BorderThickness="1" CornerRadius="5" Margin="9,9,13,5">
+                                <DockPanel VerticalAlignment="Bottom" Background="Transparent" Margin="0,0,0,24">
+                                    <Label Foreground="#FFFFC042">Reply:</Label>
+                                    <Border CornerRadius="7" Background="#FF303030" Padding="6,0" Margin="0,2,9,-22">
+                                        <TextBox TextWrapping="Wrap" Margin="0,4,0,0" Background="#7F303030" Foreground="#FFBDBDBD" BorderThickness="0" Text="{Binding SendText}"/>
+                                    </Border>
+                                </DockPanel>
+                            </Border>
                         </Grid>
-                        <Border Padding="5" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Panel.ZIndex="1" Visibility="{Binding IsOverlayVisible, Converter={StaticResource boolToVisibilityConverter}}" Background="#B2000000">
-                            <DockPanel VerticalAlignment="Bottom" Background="Transparent" Margin="0,0,0,24">                                                                
-                                <Label Foreground="#FFFFF300">Reply:</Label>
-                                <Border CornerRadius="7" Background="#FF2C2C2C" Padding="6,0" Margin="0,2,9,-22">                                    
-                                    <TextBox Margin="0" Background="#FF2C2C2C" Foreground="#FFBDBDBD" BorderThickness="0"/>
-                                </Border>
-                            </DockPanel>
-                        </Border>
 
                     </DockPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Style.Triggers>
+        <!--<Style.Triggers>
             <Trigger Property="ResizeMode" Value="CanResizeWithGrip">
                 <Setter Property="Template" Value="{StaticResource WindowTemplateKey}"/>
             </Trigger>
-        </Style.Triggers>
+        </Style.Triggers>-->
     </Style>
 
 </ResourceDictionary>
